--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,7 +119,7 @@ button[type="submit"]:hover {
 .footer {
   text-align: center;
   padding: 1rem;
-  background: #e0f2ff;
+  /* background: #e0f2ff; */
   font-size: 0.9rem;
   margin-top: 4rem;
 }
